--- a/index.html
+++ b/index.html
@@ -4,12 +4,43 @@
         <title> Portfolio</title>
         <meta charset="utf-8">
         <!-- put logo icon here -->
+        <link rel="stylesheet" type="text/css" href="css/layout.css">
     </head>
     <body>
-        
+        <div class="logo"> <!--place logo here-->    </div>
+        <header>
+            <h1>Andrew Tellas</h1>
+        </header>
+        <nav>
+            <ul>
+                <li id="drop"><a href="about-me.html">About Me </a>
+                    <ul>
+                        <li><a href="resume.html">Resume</a></li>
+                        <li><a href="skills.html">Skills</a></li>
+                    </ul>
+                </li>
+                <li><a href="moving-gallery.html">Gallery</a></li>
+            </ul>
+        </nav>
+        <div class="grid-container">
+            <div class="main">
+                <p>main</p>
+            </div>
+            <div class="aside">
+                <h1>Andrew Tellas</h1>
+                <p>aside</p>
+            </div>
+            <div class="item-1">
+                <p>item-1</p>
+            </div>
+            <div class="item-2">
+                <p>item-2</p>
+            </div>
 
-
-
+        </div>
+        <footer>
+            <p>Contact Us</p>
+        </footer>
 
     </body>
 </html>
