--- a/index.html
+++ b/index.html
@@ -12,15 +12,10 @@
             <h1>Andrew Tellas</h1>
         </header>
         <nav>
-            <ul>
-                <li id="drop"><a href="about-me.html">About Me </a>
-                    <ul>
-                        <li><a href="resume.html">Resume</a></li>
-                        <li><a href="skills.html">Skills</a></li>
-                    </ul>
-                </li>
-                <li><a href="moving-gallery.html">Gallery</a></li>
-            </ul>
+            <a href="about-me.html"><img src="Images/person.png"></a>
+            <a href="resume.html"><img src="Images/resume.png"></a>
+            <a href="skills.html">Skills</a>
+            <a href="moving-gallery.html">Gallery</a>
         </nav>
         <div class="grid-container">
             <div class="main">
@@ -31,10 +26,26 @@
                 <p>aside</p>
             </div>
             <div class="item-1">
-                <p>item-1</p>
+                <p>item-1 item-1 item-1 item-1 item-1 item-1 item-1 item-1 item-1 item-1 item-1
+                    item-1 item-1 item-1 item-1 item-1 item-1 item-1 item-1 item-1 item-1 item-1
+                    item-1 item-1 item-1 item-1 item-1 item-1 item-1 item-1 item-1 item-1 item-1
+                    item-1 item-1 item-1 item-1 item-1 item-1 item-1 item-1 item-1 item-1 item-1
+                    item-1 item-1 item-1 item-1 item-1 item-1 item-1 item-1 item-1 item-1 item-1
+                    item-1 item-1 item-1 item-1 item-1 item-1 item-1 item-1 item-1 item-1 item-1
+                    item-1 item-1 item-1 item-1 item-1 item-1 item-1 item-1 item-1 item-1 item-1
+                    item-1 item-1 item-1 item-1 item-1 item-1 item-1 item-1 item-1 item-1 item-1
+                </p>
             </div>
             <div class="item-2">
-                <p>item-2</p>
+                <p>item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2
+                    item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2
+                    item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2
+                    item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2
+                    item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2
+                    item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2
+                    item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2
+                    item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2
+                </p>
             </div>
 
         </div>
