--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
     <head>
         <title> Portfolio</title>
         <meta charset="utf-8">
-        <!-- put logo icon here -->
         <link rel="stylesheet" type="text/css" href="css/layout.css">
+        <link rel="icon" href="Images/logo.png" type="x-icon">
     </head>
     <body>
-        <div class="logo"> <!--place logo here-->    </div>
+        <img src="Images/logo.png" class="logo">
         <header>
             <h1>Andrew Tellas</h1>
         </header>
@@ -15,7 +15,7 @@
             <a href="about-me.html"><img src="Images/person.png"></a>
             <a href="resume.html"><img src="Images/resume.png"></a>
             <a href="skills.html">Skills</a>
-            <a href="moving-gallery.html">Gallery</a>
+            <a href="moving-gallery.html"><img src="Images/gallery.png"></a>
         </nav>
         <div class="grid-container">
             <div class="main">
