--- a/resume.html
+++ b/resume.html
@@ -2,4 +2,84 @@
 <html>
     <head>
         <title> Portfolio</title>
+        <meta charset="utf-8">
+        <link rel="stylesheet" type="text/css" href="css/layout.css">
+        <link rel="icon" href="Images/logo.png" type="x-icon">
     </head>
+    <body>
+        <img src="Images/logo.png" class="logo">
+        <header>
+            <h1>Andrew Tellas</h1>
+        </header>
+        <nav>
+            <a href="about-me.html"><img src="Images/person.png"></a>
+            <a href="resume.html"><img src="Images/resume.png"></a>
+            <a href="skills.html">Skills</a>
+            <a href="moving-gallery.html"><img src="Images/gallery.png"></a>
+        </nav>
+        <div class="grid-container">
+            <div class="main">
+                <h1>Education:</h1>
+                <p>
+                    Horizon High School	Phoenix, AZ	Expected Grad Date: May 2021
+                    <br>
+                    <br>
+                    Relevant Coursework: Dual Enrollment for American History
+                            
+                    West-MEC Coding Program 	GPA: 3.67
+                    <br>
+                    <br>
+                    two-year interactive program prepares students for a career as a software developer. The program
+                     teaches students how to design and develop software, build apps for phones, tablets, websites and
+                     write and test computer code.
+                </p>
+            </div>
+            <div class="aside">
+                    <img src="Images/horzion.jpg">
+                <img src="Images/west-mec.jpg">
+            </div>
+            <div class="item-1">
+                <h1>Knowledge, Skills, and Abilities:</h1>
+                <p>
+                    - Active Listening — Giving full attention to what other people are saying, taking time to understand the 
+                    points being made, asking questions as appropriate, and not interrupting at inappropriate times.
+                    <br>
+                    <br>
+                    - Active Learning — Understanding the implications of new information for both current and future problem-solving
+                     and decision-making.
+                    <br>
+                    <br>
+                    - Time Management — Managing one's own time and the time of others.
+                    <br>
+                    <br>
+                    - Judgment and Decision Making — Considering the relative costs and benefits of potential actions to choose the 
+                    most appropriate one.
+                    <br>
+                    <br>
+                    - Reading Comprehension — Understanding written sentences and paragraphs in work related documents.   
+                    <br>
+                </p>
+            </div>
+            <div class="item-2">
+                <h1>Employment / Volunteer Activities:</h1>
+                <p>
+                    USA Martial Arts	Phoenix, AZ	11/2019-Present
+                    <br>
+                    <br>
+                    Instructor and Front Desk
+                    <br>
+                    Responsibilities include:
+                    <br> 
+                    <br>
+                    Teaching students, handling payments, cleaning, talking to people that wanted
+                     to sign up for Martial Arts, Kickboxing or Krav Maga 
+                </p>
+            </div>
+
+        </div>
+        <footer>
+            <p>Contact Us</p>
+        </footer>
+
+    </body>
+</html>
