--- a/resume.html
+++ b/resume.html
@@ -7,7 +7,7 @@
         <link rel="icon" href="Images/logo.png" type="x-icon">
     </head>
     <body>
-        <img src="Images/logo.png" class="logo">
+        <a href="index.html"><img src="Images/logo.png" class="logo"></a>
         <header>
             <h1>Andrew Tellas</h1>
         </header>
