--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
         <link rel="icon" href="Images/logo.png" type="x-icon">
     </head>
     <body>
-        <img src="Images/logo.png" class="logo">
+        <a href="index.html"><img src="Images/logo.png" class="logo"></a>
         <header>
             <h1>Andrew Tellas</h1>
         </header>
         <nav>
+            <a href="index.html"><img src="Images/house.png">   </a>
             <a href="about-me.html"><img src="Images/person.png"></a>
             <a href="resume.html"><img src="Images/resume.png"></a>
             <a href="skills.html">Skills</a>
@@ -19,7 +20,13 @@
         </nav>
         <div class="grid-container">
             <div class="main">
-                <p>main</p>
+                <p>main main main main main main main
+                    main main main main main main
+                    main main main main main main
+                    main main main main main main main main main main main main
+                    main main main main main main main main main main main main
+                    main main main main main main main main main main main main
+                </p>
             </div>
             <div class="aside">
                 <h1>Andrew Tellas</h1>
