--- a/about-me.html
+++ b/about-me.html
@@ -12,6 +12,7 @@
             <h1>Andrew Tellas</h1>
         </header>
         <nav>
+            <a href="index.html"><img src="Images/house.png"></a>
             <a href="about-me.html"><img src="Images/person.png"></a>
             <a href="resume.html"><img src="Images/resume.png"></a>
             <a href="skills.html">Skills</a>
