--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
             <h1>Andrew Tellas</h1>
         </header>
         <nav>
-            <a href="index.html"><img src="Images/house.png"></a>
+            <a href="index.html"><img src="Images/new-home.png"></a>
             <a href="about-me.html"><img src="Images/person.png"></a>
             <a href="resume.html"><img src="Images/resume.png"></a>
-            <a href="skills.html"><img src="Images/skills.jpg"></a>
+            <a href="skills.html"><img src="Images/skills.png"></a>
             <a href="moving-gallery.html"><img src="Images/gallery.png"></a>
         </nav>
         <div class="grid-container">
