changed icons and gallery page

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <h1>Andrew Tellas</h1>
         </header>
         <nav>
-            <a href="index.html"><img src="Images/new-home.png"></a>
+            <a href="index.html"><img src="Images/home.png"></a>
             <a href="about-me.html"><img src="Images/person.png"></a>
             <a href="resume.html"><img src="Images/resume.png"></a>
             <a href="skills.html"><img src="Images/skills.png"></a>
