--- a/moving-gallery.html
+++ b/moving-gallery.html
@@ -2,4 +2,7 @@
 <html>
     <head>
         <title> Portfolio</title>
+        <link rel="stylesheet" type="text/css" href="css/gallery.css">
     </head>
+    <body>dkfdkfdlkfjdsklfjdk</body>
+</html>
