--- a/moving-gallery.html
+++ b/moving-gallery.html
@@ -4,5 +4,15 @@
         <title> Portfolio</title>
         <link rel="stylesheet" type="text/css" href="css/gallery.css">
     </head>
-    <body>dkfdkfdlkfjdsklfjdk</body>
+    <body>
+        <div class="coding">
+            <center><h1> Coding </h1></center>
+        </div>
+        <div class="arizona">
+            <center><h1> Arizona </h1></center>
+        </div>
+
+
+
+    </body>
 </html>
