--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
         <title> Portfolio</title>
         <meta charset="utf-8">
         <link rel="stylesheet" type="text/css" href="css/layout.css">
-        <link rel="icon" href="Images/logo.png" type="x-icon">
+        <link rel="icon" href="Images/duck.png" type="x-icon">
     </head>
+    <a href="index.html"><img src="Images/duck.png" class="logo"></a>
     <body>
-        <a href="index.html"><img src="Images/logo.png" class="logo"></a>
+        
         <header>
             <h1>Andrew Tellas</h1>
         </header>
@@ -20,12 +21,9 @@
         </nav>
         <div class="grid-container">
             <div class="main">
-                <p>main main main main main main main
-                    main main main main main main
-                    main main main main main main
-                    main main main main main main main main main main main main
-                    main main main main main main main main main main main main
-                    main main main main main main main main main main main main
+                <p>Hi, I'm Andrew. I am an Organized, Teachable first year Coding student
+                    who is disciplined and able to communicate with to a variety of audiences.
+                    Seeking the position of Coding.
                 </p>
             </div>
             <div class="aside">
@@ -33,20 +31,13 @@
                 <p>aside</p>
             </div>
             <div class="item-1">
-                <p>item-1 item-1 item-1 item-1 item-1 item-1 item-1 item-1 item-1 item-1 item-1
-                    item-1 item-1 item-1 item-1 item-1 item-1 item-1 item-1 item-1 item-1 item-1
-                    item-1 item-1 item-1 item-1 item-1 item-1 item-1 item-1 item-1 item-1 item-1
-                    item-1 item-1 item-1 item-1 item-1 item-1 item-1 item-1 item-1 item-1 item-1
-                    item-1 item-1 item-1 item-1 item-1 item-1 item-1 item-1 item-1 item-1 item-1
-                    item-1 item-1 item-1 item-1 item-1 item-1 item-1 item-1 item-1 item-1 item-1
-                    item-1 item-1 item-1 item-1 item-1 item-1 item-1 item-1 item-1 item-1 item-1
-                    item-1 item-1 item-1 item-1 item-1 item-1 item-1 item-1 item-1 item-1 item-1
+                <h1>Theme</h1>
+                <p>The theme of this website is water. The duck as my logo represents flexibility 
+                    and resourcefulness, like myself.
                 </p>
             </div>
             <div class="item-2">
                 <p>item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2
-                    item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2
-                    item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2
                     item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2
                     item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2
                     item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2
@@ -57,8 +48,19 @@
 
         </div>
         <footer>
-            <p>Contact Us</p>
+            <h2>Contact Us</h2>
+            <p>  e-mail address: andrewtellas568@gmail.com
+            <br>
+                phone number: 602-418-6331
+            <br>
+            </p>
         </footer>
 
+        <!--Animation-->
+
+        <div class="ocean">
+            <div class="wave"></div>
+            <div class="wave-2"></div>
+        </div>
     </body>
 </html>
