--- a/resume.html
+++ b/resume.html
@@ -4,18 +4,18 @@
         <title> Portfolio</title>
         <meta charset="utf-8">
         <link rel="stylesheet" type="text/css" href="css/layout.css">
-        <link rel="icon" href="Images/logo.png" type="x-icon">
+        <link rel="icon" href="Images/duck.png" type="x-icon">
     </head>
     <body>
-        <a href="index.html"><img src="Images/logo.png" class="logo"></a>
+        <a href="index.html"><img src="Images/duck.png" class="logo"></a>
         <header>
             <h1>Andrew Tellas</h1>
         </header>
         <nav>
-            <a href="index.html"><img src="Images/house.png"></a>
+            <a href="index.html"><img src="Images/home.png"></a>
             <a href="about-me.html"><img src="Images/person.png"></a>
             <a href="resume.html"><img src="Images/resume.png"></a>
-            <a href="skills.html">Skills</a>
+            <a href="skills.html"><img src="Images/skills.png"></a>
             <a href="moving-gallery.html"><img src="Images/gallery.png"></a>
         </nav>
         <div class="grid-container">
