--- a/about-me.html
+++ b/about-me.html
@@ -4,24 +4,25 @@
         <title> Portfolio</title>
         <meta charset="utf-8">
         <link rel="stylesheet" type="text/css" href="css/layout.css">
-        <link rel="icon" href="Images/logo.png" type="x-icon">
+        <link rel="icon" href="Images/duck.png" type="x-icon">
     </head>
     <body>
-        <a href="index.html"><img src="Images/logo.png" class="logo"></a>
+        <a href="index.html"><img src="Images/duck.png" class="logo"></a>
         <header>
             <h1>Andrew Tellas</h1>
         </header>
         <nav>
-            <a href="index.html"><img src="Images/house.png"></a>
+            <a href="index.html"><img src="Images/home.png"></a>
             <a href="about-me.html"><img src="Images/person.png"></a>
             <a href="resume.html"><img src="Images/resume.png"></a>
-            <a href="skills.html">Skills</a>
+            <a href="skills.html"><img src="Images/skills.png"></a>
             <a href="moving-gallery.html"><img src="Images/gallery.png"></a>
         </nav>
         <div class="grid-container">
             <div class="main">
-                <p>Organized, Teachable first year Coding student who is disciplined and able to communicate
-                    with to a variety of audiences. Seeking the position of Coding.</p>
+                <p>Hi, I'm Andrew. I am an Organized, Teachable first year Coding student who
+                    is disciplined and able to communicate with to a variety of audiences.
+                    Seeking the position of Coding.</p>
             </div>
             <div class="aside">
                 <h1>Andrew Tellas</h1>
@@ -29,13 +30,11 @@
             </div>
             <div class="item-1">
                 <h1>Hobbies</h1>
-                <p>Some of my hobbies are playing video games, Taekwondo, basketball, and hanging out with my friends. 
+                <p>Some of my hobbies include playing video games, Taekwondo, basketball, and hanging out with my friends. 
                 </p>
             </div>
             <div class="item-2">
                 <p>item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2
-                    item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2
-                    item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2
                     item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2
                     item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2
                     item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2
