--- a/skills.html
+++ b/skills.html
@@ -2,4 +2,52 @@
 <html>
     <head>
         <title> Portfolio</title>
+        <meta charset="utf-8">
+        <link rel="stylesheet" type="text/css" href="css/layout.css">
+        <link rel="icon" href="Images/duck.png" type="x-icon">
     </head>
+    <body>
+        <a href="index.html"><img src="Images/duck.png" class="logo"></a>
+        <header>
+            <h1>Andrew Tellas</h1>
+        </header>
+        <nav>
+            <a href="index.html"><img src="Images/home.png"></a>
+            <a href="about-me.html"><img src="Images/person.png"></a>
+            <a href="resume.html"><img src="Images/resume.png"></a>
+            <a href="skills.html"><img src="Images/skills.png"></a>
+            <a href="moving-gallery.html"><img src="Images/gallery.png"></a>
+        </nav>
+        <div class="grid-container">
+            <div class="main">
+                <h1>Leadership</h1>
+                <p> Part of my job at USA Martial Arts was to teach Taekwondo classes. I had present myself
+                    with confidence and discipline. Also, I am a member of the Future Business Leaders
+                    of America(FBLA), which an organization to help young students learn leadership skills.
+                </p>
+            </div>
+            <div class="aside">
+                <h1>Analytical</h1>
+                <p>I am a very detailed</p>
+            </div>
+            <div class="item-1">
+                <h1>Teamwork</h1>
+                <p> I cooperate well with others, I encourage constructive criticism. 
+                </p>
+            </div>
+            <div class="item-2">
+                <h1>Organization</h1>
+                <p>item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2
+                    item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2
+                    item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2
+                    item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2
+                    item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2
+                    item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2
+                </p>
+            </div>
+        </div>
+        <footer>
+            <p>Contact Us</p>
+        </footer>
+    </body>
+</html>
