--- a/index.html
+++ b/index.html
@@ -27,8 +27,13 @@
                 </p>
             </div>
             <div class="aside">
-                <h1>Andrew Tellas</h1>
-                <p>aside</p>
+                <h1>Contact Me</h1>
+                <p><center>e-mail address: andrewtellas568@gmail.com
+                <br>
+                <br>
+                    phone number: 602-418-6331</center>
+                <br>
+                </p>
             </div>
             <div class="item-1">
                 <h1>Theme</h1>
@@ -47,20 +52,13 @@
             </div>
 
         </div>
-        <footer>
-            <h2>Contact Us</h2>
-            <p>  e-mail address: andrewtellas568@gmail.com
-            <br>
-                phone number: 602-418-6331
-            <br>
-            </p>
-        </footer>
 
         <!--Animation-->
+        
 
         <div class="ocean">
             <div class="wave"></div>
-            <div class="wave-2"></div>
+            <div class="wave"></div>
         </div>
     </body>
 </html>
