--- a/about-me.html
+++ b/about-me.html
@@ -20,26 +20,31 @@
         </nav>
         <div class="grid-container">
             <div class="main">
-                <p>Hi, I'm Andrew. I am an Organized, Teachable first year Coding student who
-                    is disciplined and able to communicate with to a variety of audiences.
-                    Seeking the position of Coding.</p>
+                <h1>My History</h1>
+                <p>history of me history of me history of me history of me history of me history of me
+                        history of me history of me history of me history of me history of me history of me
+                        history of me history of me history of me
+                </p>
             </div>
             <div class="aside">
-                <h1>Andrew Tellas</h1>
-                <p>aside</p>
+                <h1>Contact Me</h1>
+                <p><center>e-mail address: andrewtellas568@gmail.com
+                <br>
+                <br>
+                    phone number: 602-418-6331</center>
+                <br>
+                </p>
             </div>
             <div class="item-1">
-                <h1>Hobbies</h1>
-                <p>Some of my hobbies include playing video games, Taekwondo, basketball, and hanging out with my friends. 
+                <h1>What I'm doing now</h1>
+                <p>the present of me the present of me the present of me the present of me the present of me the present of me
+                        the present of me the present of me the present of me the present of me the present of me the present of me
                 </p>
             </div>
             <div class="item-2">
-                <p>item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2
-                    item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2
-                    item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2
-                    item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2
-                    item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2
-                    item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2
+                <h1>My Future</h1>
+                <p> my goals my goals my goals my goals my goals my goals my goals my goals my goals my goals
+                        my goals my goals my goals my goals my goals my goals my goals my goals my goals my goals
                 </p>
             </div>
         
