--- a/moving-gallery.html
+++ b/moving-gallery.html
@@ -6,15 +6,15 @@
         <link rel="icon" href="Images/duck.png" type="x-icon">
     </head>
     <body>
-        <div class="home">
-            <center><a href="index.html"><img src="Images/home.png"></a></center>
-        </div>
+
         <div class="coding">
             <center><h1>Coding</h1></center>
         </div>
         <div class="arizona">
             <center><h1> Arizona </h1></center>
         </div>
-        
+        <div class="home">
+               <a href="index.html"><img src="Images/home.png"></a>
+            </div>
     </body>
 </html>
