--- a/resume.html
+++ b/resume.html
@@ -36,7 +36,14 @@
                 </p>
             </div>
             <div class="aside">
-                    <img src="Images/horzion.jpg">
+                <h1>Contact Me</h1>
+                <p><center>e-mail address: andrewtellas568@gmail.com
+                <br>
+                <br>
+                    phone number: 602-418-6331</center>
+                <br>
+                </p>
+                <img src="Images/horzion.jpg">
                 <img src="Images/west-mec.jpg">
             </div>
             <div class="item-1">
