--- a/index.html
+++ b/index.html
@@ -42,13 +42,7 @@
                 </p>
             </div>
             <div class="item-2">
-                <p>item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2
-                    item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2
-                    item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2
-                    item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2
-                    item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2
-                    item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2
-                </p>
+                <p> this will have a picture of me</p>
             </div>
 
         </div>
