--- a/about-me.html
+++ b/about-me.html
@@ -21,9 +21,8 @@
         <div class="grid-container">
             <div class="main">
                 <h1>My History</h1>
-                <p>history of me history of me history of me history of me history of me history of me
-                        history of me history of me history of me history of me history of me history of me
-                        history of me history of me history of me
+                <p> I knew that I want to work with computer since I was 13 years old. I always 
+                    thought it would be cool to create videogames. 
                 </p>
             </div>
             <div class="aside">
@@ -37,20 +36,24 @@
             </div>
             <div class="item-1">
                 <h1>What I'm doing now</h1>
-                <p>the present of me the present of me the present of me the present of me the present of me the present of me
-                        the present of me the present of me the present of me the present of me the present of me the present of me
+                <p> I am pursuing my love for computers by taking a coding class at West-MEC. I plan 
+                    to recieve certification in HTML, CSS, and JavaScript. Until I have more experience
+                    with computers, I have been working at USA Martial Arts for the past 13 months. It
+                    has given me a seek peak of what its like to be in a work environment.
                 </p>
             </div>
             <div class="item-2">
                 <h1>My Future</h1>
-                <p> my goals my goals my goals my goals my goals my goals my goals my goals my goals my goals
-                        my goals my goals my goals my goals my goals my goals my goals my goals my goals my goals
+                <p> I don't know what I want to do with my life yet. Computer gaming seems to really
+                    interest me. Web development sounds like a fun challenge as well.
                 </p>
             </div>
+
+        <!--Animation-->
         
+        <div class="ocean">
+            <div class="wave"></div>
+            <div class="wave"></div>
         </div>
-        <footer>
-            <p>Contact Us</p>
-        </footer>
     </body>
 </html>
