--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 </p>
             </div>
             <div class="aside">
-                <h1>Contact Me</h1>
+                <h1>Contact Info</h1>
                 <p><center>e-mail address: andrewtellas568@gmail.com
                 <br>
                 <br>
@@ -36,20 +36,19 @@
                 </p>
             </div>
             <div class="item-1">
-                <h1>Theme</h1>
-                <p>The theme of this website is water. The duck as my logo represents flexibility 
-                    and resourcefulness, like myself.
+                <h1>Hobbies</h1>
+                <p>Some of my hobbies include: videogames, basketball, martial arts, and hanging out
+                    with my friends. 
                 </p>
             </div>
             <div class="item-2">
-                <p> this will have a picture of me</p>
+                <img src="Images/horzion.jpg">
             </div>
 
         </div>
 
         <!--Animation-->
         
-
         <div class="ocean">
             <div class="wave"></div>
             <div class="wave"></div>
