--- a/moving-gallery.html
+++ b/moving-gallery.html
@@ -8,13 +8,13 @@
     <body>
 
         <div class="coding">
-            <center><h1>Coding</h1></center>
+            <h1>Coding</h1>
         </div>
         <div class="arizona">
-            <center><h1> Arizona </h1></center>
+            <h1> Arizona </h1>
         </div>
         <div class="home">
-               <a href="index.html"><img src="Images/home.png"></a>
-            </div>
+               <a href="index.html"><img src="Images/pineapple.png"></a>
+        </div>
     </body>
 </html>
