--- a/resume.html
+++ b/resume.html
@@ -62,10 +62,6 @@
                     <br>
                     - Judgment and Decision Making — Considering the relative costs and benefits of potential actions to choose the 
                     most appropriate one.
-                    <br>
-                    <br>
-                    - Reading Comprehension — Understanding written sentences and paragraphs in work related documents.   
-                    <br>
                 </p>
             </div>
             <div class="item-2">
@@ -85,9 +81,12 @@
             </div>
 
         </div>
-        <footer>
-            <p>Contact Us</p>
-        </footer>
 
+        <!--Animation-->
+        
+        <div class="ocean-2">
+            <div class="wave"></div>
+            <div class="wave"></div>
+        </div>
     </body>
 </html>
