--- a/skills.html
+++ b/skills.html
@@ -21,33 +21,53 @@
         <div class="grid-container">
             <div class="main">
                 <h1>Leadership</h1>
-                <p> Part of my job at USA Martial Arts was to teach Taekwondo classes. I had present myself
+                <p> Part of my job at USA Martial Arts is to teach Taekwondo classes. I present myself
                     with confidence and discipline. Also, I am a member of the Future Business Leaders
                     of America(FBLA), which an organization to help young students learn leadership skills.
                 </p>
             </div>
             <div class="aside">
-                <h1>Analytical</h1>
-                <p>I am a very detailed</p>
+                <h1>Contact Me</h1>
+                <p><center>e-mail address: andrewtellas568@gmail.com
+                <br>
+                <br>
+                    phone number: 602-418-6331</center>
+                <br>
+                </p>
             </div>
             <div class="item-1">
                 <h1>Teamwork</h1>
-                <p> I cooperate well with others, I encourage constructive criticism. 
+                <p> I cooperate well with others to reach a common goal. I encourage constructive 
+                    criticism. I am comitted and strive for excellence. I am a flexible person within
+                    the team and prepared. I am reliable, responsible and repectful of my team members
+                    ideas and viewpoints.
                 </p>
             </div>
             <div class="item-2">
                 <h1>Organization</h1>
-                <p>item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2
-                    item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2
-                    item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2
-                    item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2
-                    item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2
-                    item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2 item-2
+                <p>Organizational skills include:
+                    <br>
+                    <br>
+                    - Proper time mangement
+                    <br>
+                    <br>
+                    - Ability to plan and schedule effectively
+                    <br>
+                    <br>
+                    - Goal setting
+                    <br>
+                    <br>
+                    - Attention to detail
+                    <br>
                 </p>
             </div>
         </div>
-        <footer>
-            <p>Contact Us</p>
-        </footer>
+
+        <!--Animation-->
+        
+        <div class="ocean">
+            <div class="wave"></div>
+            <div class="wave"></div>
+        </div>
     </body>
 </html>
