--- a/moving-gallery.html
+++ b/moving-gallery.html
@@ -10,11 +10,24 @@
         <div class="coding">
             <h1>Coding</h1>
         </div>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
         <div class="arizona">
             <h1> Arizona </h1>
         </div>
         <div class="home">
                <a href="index.html"><img src="Images/pineapple.png"></a>
+        </div>
+        <div class="sand">
+            s
         </div>
     </body>
 </html>
