--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         
         <header>
-            <h1>Andrew Tellas</h1>
+            <h1><img src="Images/duck-2.png" width="50" height="50">Andrew Tellas<img src="Images/duck.png" width="50" height="50"></h1>
         </header>
         <nav>
             <a href="index.html"><img src="Images/home.png"></a>
