--- a/index.html
+++ b/index.html
@@ -8,17 +8,18 @@
     </head>
     <a href="index.html"><img src="Images/duck.png" class="logo"></a>
     <body>
-        
-        <header>
-            <h1><img src="Images/duck-2.png" width="50" height="50">Andrew Tellas<img src="Images/duck.png" width="50" height="50"></h1>
-        </header>
-        <nav>
-            <a href="index.html"><img src="Images/home.png"></a>
-            <a href="about-me.html"><img src="Images/person.png"></a>
-            <a href="resume.html"><img src="Images/resume.png"></a>
-            <a href="skills.html"><img src="Images/skills.png"></a>
-            <a href="moving-gallery.html"><img src="Images/gallery.png"></a>
-        </nav>
+        <div class="combine">
+            <header>
+                <h1><img src="Images/duck-2.png" width="50" height="50">Andrew Tellas<img src="Images/duck.png" width="50" height="50"></h1>
+            </header>
+            <nav>
+                <a href="index.html"><img src="Images/home.png"></a>
+                <a href="about-me.html"><img src="Images/person.png"></a>
+                <a href="resume.html"><img src="Images/resume.png"></a>
+                <a href="skills.html"><img src="Images/skills.png"></a>
+                <a href="moving-gallery.html"><img src="Images/gallery.png"></a>
+            </nav>
+        </div>
         <div class="grid-container">
             <div class="main">
                 <p>Hi, I'm Andrew. I am an Organized, Teachable first year Coding student
@@ -27,13 +28,15 @@
                 </p>
             </div>
             <div class="aside">
-                <h1>Contact Info</h1>
-                <p><center>e-mail address: andrewtellas568@gmail.com
-                <br>
-                <br>
-                    phone number: 602-418-6331</center>
-                <br>
-                </p>
+                <div class="fade">
+                    <h1>Contact Info</h1>
+                    <p><center>e-mail address: andrewtellas568@gmail.com
+                    <br>
+                    <br>
+                        phone number: 602-418-6331</center>
+                    <br>
+                    </p>
+                </div>
             </div>
             <div class="item-1">
                 <h1>Hobbies</h1>
@@ -44,14 +47,13 @@
             <div class="item-2">
                 <img src="Images/horzion.jpg">
             </div>
-
         </div>
-
+    </body>
         <!--Animation-->
         
         <div class="ocean">
             <div class="wave"></div>
             <div class="wave"></div>
         </div>
-    </body>
+   
 </html>
