--- a/moving-gallery.html
+++ b/moving-gallery.html
@@ -8,7 +8,7 @@
     <body>
 
         <div class="coding">
-            <h1>Coding</h1>
+           <h1><a href="Gallery/Coding/Coding/Index.html">Coding</a></h1>
         </div>
         <br>
         <br>
@@ -21,7 +21,7 @@
         <br>
         <br>
         <div class="arizona">
-            <h1> Arizona </h1>
+           <h1><a href="Gallery/Arizona/Arizona/Index.html"> Arizona</a></h1>
         </div>
         <div class="home">
                <a href="index.html"><img src="Images/pineapple.png"></a>
