--- a/resume.html
+++ b/resume.html
@@ -9,7 +9,7 @@
     <body>
         <a href="index.html"><img src="Images/duck.png" class="logo"></a>
         <header>
-            <h1>Andrew Tellas</h1>
+            <h1><img src="Images/duck-2.png" width="50" height="50">Andrew Tellas<img src="Images/duck.png" width="50" height="50"></h1>
         </header>
         <nav>
             <a href="index.html"><img src="Images/home.png"></a>
@@ -81,12 +81,11 @@
             </div>
 
         </div>
-
+    </body>
         <!--Animation-->
         
         <div class="ocean-2">
             <div class="wave"></div>
             <div class="wave"></div>
         </div>
-    </body>
 </html>
