--- a/about-me.html
+++ b/about-me.html
@@ -9,7 +9,7 @@
     <body>
         <a href="index.html"><img src="Images/duck.png" class="logo"></a>
         <header>
-            <h1>Andrew Tellas</h1>
+            <h1><img src="Images/duck-2.png" width="50" height="50">Andrew Tellas<img src="Images/duck.png" width="50" height="50"></h1>
         </header>
         <nav>
             <a href="index.html"><img src="Images/home.png"></a>
@@ -48,12 +48,11 @@
                     interest me. Web development sounds like a fun challenge as well.
                 </p>
             </div>
-
+    </body>
         <!--Animation-->
         
         <div class="ocean">
             <div class="wave"></div>
             <div class="wave"></div>
         </div>
-    </body>
 </html>
