--- a/skills.html
+++ b/skills.html
@@ -9,7 +9,7 @@
     <body>
         <a href="index.html"><img src="Images/duck.png" class="logo"></a>
         <header>
-            <h1>Andrew Tellas</h1>
+            <h1><img src="Images/duck-2.png" width="50" height="50">Andrew Tellas<img src="Images/duck.png" width="50" height="50"></h1>
         </header>
         <nav>
             <a href="index.html"><img src="Images/home.png"></a>
@@ -25,6 +25,7 @@
                     with confidence and discipline. Also, I am a member of the Future Business Leaders
                     of America(FBLA), which an organization to help young students learn leadership skills.
                 </p>
+                <br>
             </div>
             <div class="aside">
                 <h1>Contact Me</h1>
@@ -62,12 +63,11 @@
                 </p>
             </div>
         </div>
-
+    </body>
         <!--Animation-->
         
         <div class="ocean">
             <div class="wave"></div>
             <div class="wave"></div>
         </div>
-    </body>
 </html>
