--- a/resume.html
+++ b/resume.html
@@ -8,16 +8,18 @@
     </head>
     <body>
         <a href="index.html"><img src="Images/duck.png" class="logo"></a>
-        <header>
-            <h1><img src="Images/duck-2.png" width="50" height="50">Andrew Tellas<img src="Images/duck.png" width="50" height="50"></h1>
-        </header>
-        <nav>
-            <a href="index.html"><img src="Images/home.png"></a>
-            <a href="about-me.html"><img src="Images/person.png"></a>
-            <a href="resume.html"><img src="Images/resume.png"></a>
-            <a href="skills.html"><img src="Images/skills.png"></a>
-            <a href="moving-gallery.html"><img src="Images/gallery.png"></a>
-        </nav>
+        <div class="combine">
+            <header>
+                <h1><img src="Images/duck-2.png" width="50" height="50">Andrew Tellas<img src="Images/duck.png" width="50" height="50"></h1>
+            </header>
+            <nav>
+                <a href="index.html"><img src="Images/home.png"></a>
+                <a href="about-me.html"><img src="Images/person.png"></a>
+                <a href="resume.html"><img src="Images/resume.png"></a>
+                <a href="skills.html"><img src="Images/skills.png"></a>
+                <a href="moving-gallery.html"><img src="Images/gallery.png"></a>
+            </nav>
+        </div>
         <div class="grid-container">
             <div class="main">
                 <h1>Education:</h1>
@@ -36,7 +38,7 @@
                 </p>
             </div>
             <div class="aside">
-                <h1>Contact Me</h1>
+                <h1>Contact Info</h1>
                 <p><center>e-mail address: andrewtellas568@gmail.com
                 <br>
                 <br>
